--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Soapvar Days Without Weed - soapvar</title>
+  <title>Days Without Weed - soapvar</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.fog.min.js"></script>
   <style>
@@ -128,7 +128,7 @@
 </head>
 <body>
   <div id="content">
-    <h1>Days Without Weed</h1>
+    <h1>Soapvar Days Without Weed</h1>
     <div id="counter"></div>
 
     <div id="alphaMeterContainer">
